# sketchdojo-backend

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  sketchdojo-backend.md
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py  script.py.mako
app/: __init__.py  config.py  dependencies.py  main.py
app/api/: __init__.py  router.py  (+1 more)
docker/: .dockerignore  Dockerfile  Dockerfile.api  Dockerfile.worker  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  docker-settings.py  monitoring-compose.yml  run-docker.ps1  worker-compose.yml
monitoring/: prometheus.yml
nginx/: nginx.conf
requirements/: base.txt  dev.txt  development.txt  prod.txt  production.txt  test.txt
scripts/: autofix.sh  create_migration.py  deploy.sh  init_db.py  lint.sh  migrate.py  run.sh  run_tests.sh  run_worker.sh  setup.sh  start_development.sh  test_api.sh
storage/: task_03d293db-9823-4329-9260-6d251ed4ac66.json  task_04e48990-5f35-47a1-84fd-130bc54b14de.json  task_15295c6e-77f3-41f4-8528-9a0dc5579690.json  task_246ec3f9-1d22-4743-b6a8-afc3e391d2b8.json  task_2a89124d-48c2-4913-8ce7-d1d9d75c284a.json  task_3df43590-8cc9-48cf-bcdf-61b46eddc359.json  task_42b59fe7-ec1c-4149-bd62-c780a8ddcdd3.json  task_465c273b-4787-41fc-9cc8-c0989786ece9.json  task_4f31bf59-8488-4ae3-9285-a913bbbccca1.json  task_5cbbb158-d68c-48b0-a3f5-6233b39a9604.json  task_63f59335-c458-4631-bf92-2d799bcb453f.json  task_70475a91-3ea9-4adc-8111-ae85dbdd0d16.json  task_73b16698-d80b-476e-b15b-d7f041ab3fba.json  task_75042cef-8bc7-499d-8c04-0bbb4a9bef71.json  task_89cc6003-4733-46a9-aa1a-4d4cbdb7778b.json  task_8ea1619c-675c-4765-a633-663492047194.json  task_8fd6cfdf-60f2-4034-87f9-5e01c8b60c70.json  task_9170043c-0368-42eb-a446-ea406ca2f8f7.json  task_9435ff7e-3208-4e62-9197-fb71199262ba.json  task_99818e60-acce-4e03-9a06-f38ec57e39c2.json  task_a286048a-08e2-41df-a2f6-93e978f308f5.json  task_afe4d0b0-ced6-425c-8e11-a9eb8d449f72.json  task_b7c5ec5b-5396-45d5-8823-b5b584da4f3f.json  task_bd0b6ecb-935b-4261-ac2b-c4d1f6cc2915.json  task_dcc35ec7-a180-474f-ace0-e230b724a139.json  task_eb311399-f30d-439d-99e6-ed70d5af687e.json  task_ef94719b-3e9a-47eb-9825-a4fc82216747.json  task_f0906118-821e-4fe3-94c9-762722b88f4a.json  webtoon_103392fc-c562-4350-8a9d-9057b077baa9.json  webtoon_115ed96e-a120-4329-8873-4dda9310e310.json  webtoon_15ddb510-8029-4f78-a8dc-9c4a41f1ca16.json  webtoon_1e2ed646-088a-4202-8da9-948fc34d90fe.json  webtoon_1f5bbbb2-8448-4623-b6d4-93de66ecdb30.json  webtoon_346e732b-c994-4901-8009-c5f595c554b6.json  webtoon_40a73482-fa01-49fe-b9fe-5081c1419f7f.json  webtoon_4c9475ee-baa5-4bb7-b828-056ab621670a.json  webtoon_5aa19c4f-1842-48b1-b731-2c8771be7f34.json  webtoon_60b07c3c-9ab3-43ec-b9cb-67cea83bce92.json  webtoon_630ec380-0749-4ac4-aa07-559c7cd475ef.json  webtoon_66f44515-bf3a-434c-97d3-26734c2a8091.json  (+13 more)
tests/: __init__.py  conftest.py
(+285 files in other folders)
